HELIO-3985 Institutional License Affiliations

--- a/app/views/fulcrum/_institutions.html.erb
+++ b/app/views/fulcrum/_institutions.html.erb
@@ -43,11 +43,7 @@
           <div><%= institution.name %>&nbsp;</div>
           <div><%= institution.entity_id %>&nbsp;</div>
         </td>
-        <td>
-          <% institution.institution_affiliations.each do |institution_affiliation| %>
-            <div><%= link_to institution_affiliation.dlps_institution_id.to_s + ":" + institution_affiliation.affiliation, greensub_institution_affiliation_path(institution_affiliation) %></div>
-          <% end %>
-        </td>
+        <td><%= institution.institution_affiliations.count %></td>
         <td><%= institution.licenses.count %></td>
       </tr>
     <% end %>
