--- a/app/views/fulcrum/_licenses.html.erb
+++ b/app/views/fulcrum/_licenses.html.erb
@@ -1,52 +1,54 @@
-<%
-  licenses = Greensub::License.filter_by(type_like: params[:type_like]).order(type: :asc).page(params[:page])
-%>
+<% licenses = Greensub::License.filter_by(type_like: params[:type_like], licensee_id_like: params[:licensee_id_like], product_id_like: params[:product_id_like]).order(type: :asc).page(params[:page]) %>
 <h1>Licenses</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:licenses) %>">
   <table class="table table-striped" summary="License List">
     <tr>
       <th>
-        <div>&nbsp;</div>
-        <button name="submit" type="submit" value="filter">Filter</button>
-
+        <%#= link_to(greensub_license_path) do %>
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
+        <%# end %>
       </th>
-      <th>
-        <% size = 6 %>
-        <div>
-          <div><label for="type_like">Type</label></div>
-          <div><input type="text" name="type_like" value="<%= params[:type_like] %>" size="<%= size %>" aria-label="type_like"></div>
-        </div>
-      </th>
-      <th>Licensee</th>
-      <th>Product</th>
+      <th><label for="type_like">Type</label></th>
+      <th>Affiliations</th>
+      <th><label for="licensee_id_like">Licensee</label></th>
+      <th><label for="product_id_like">Product</label></th>
       <th>&nbsp;</th>
-      <th>
-        &nbsp;
-      </th>
+      <th>&nbsp;</th>
+    </tr>
+    <tr>
+      <td><button name="submit" type="submit" value="filter">Filter</button></td>
+      <td><%= select(nil, "type_like", Greensub::License::TYPES.collect { |type| [type, type] }, include_blank: true, selected: params[:type_like]) %></td>
+      <td>&nbsp;</td>
+      <td><%= select(nil, "licensee_id_like", Greensub::Institution.all.collect { |institution| [institution.name, institution.id] }, include_blank: true, selected: params[:licensee_id_like]) %></td>
+      <td><%= select(nil, "product_id_like", Greensub::Product.all.collect { |product| [product.name, product.id] }, include_blank: true, selected: params[:product_id_like]) %></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <% licenses.each do |license| %>
       <tr>
-        <td><%= link_to(edit_greensub_license_path(license)) do %>
-            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
+        <td><%= link_to(greensub_license_path(license)) do %>
+            <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
         <td>
           <%= license.label %>
         </td>
         <td>
+          <%= license.license_affiliations.map(&:affiliation) %>
+        </td>
+        <td>
             <% if license.individual? %>
-              <%= link_to "#{license.individual.identifier}", greensub_individual_path(license.individual) %>
+              <%= link_to "#{license.licensee.identifier}", greensub_individual_path(license.licensee) %>
             <% end %>
             <% if license.institution? %>
-              <%= link_to "#{license.institution.name}", greensub_institution_path(license.institution) %>
+              <%= link_to "#{license.licensee.name}", greensub_institution_path(license.licensee) %>
+            &nbsp;
+              <%= license.licensee.institution_affiliations.map(&:affiliation) %>
             <% end %>
           &nbsp;
         </td>
         <td>
-            <% if license.product? %>
-              <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
-            <% end %>
-          &nbsp;
+          <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
         </td>
         <td>&nbsp;</td>
         <td>
