--- a/app/views/greensub/licenses/_licenses.html.erb
+++ b/app/views/greensub/licenses/_licenses.html.erb
@@ -1,35 +1,25 @@
-<b>
-  <div class="col-md-10">
-    <div class="col-md-1">ID</div>
-    <div class="col-md-1">Type</div>
-    <div class="col-md-5">Licensee</div>
-    <div class="col-md-5">Product</div>
-  </div>
-  <div class="col-md-2">&nbsp;</div>
-  <hr/>
-</b>
 <% licenses.each do |license| %>
   <div class="col-md-10">
     <div class="col-md-1"><%= license.id %></div>
     <div class="col-md-1"><%= license.label %></div>
-    <div class="col-md-5">
+    <div class="col-md-2"><%= license.license_affiliations.map(&:affiliation).join(', ') %></div>
+    <div class="col-md-4">
       <% if license.individual? %>
-        <%= link_to "#{license.individual.identifier}", greensub_individual_path(license.individual) %>
+        <%= link_to "#{license.licensee.identifier}", greensub_individual_path(license.licensee) %>
       <% end %>
       <% if license.institution? %>
-        <%= link_to "#{license.institution.name}", greensub_institution_path(license.institution) %>
-      <% end %>
-      &nbsp;
+        <%= link_to "#{license.licensee.name}", greensub_institution_path(license.licensee) %>
+        &nbsp;
+        <%= license.licensee.institution_affiliations.map(&:affiliation).join(', ') %>
+    <% end %>
     </div>
-    <div class="col-md-5">
-      <% if license.product? %>
-        <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
-      <% end %>
-      &nbsp;
+    <div class="col-md-4">
+      <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
     </div>
   </div>
   <div class="col-md-2">
-    <div class="col-md-4"><%= link_to_if license.update?, 'Edit', edit_greensub_license_path(license) %></div>
-    <div class="col-md-4"><%= link_to_if license.destroy?, 'Destroy', greensub_license_path(license), method: :delete, data: { confirm: 'Are you sure?' } %></div>
+    <div class="col-md-4"><%= link_to 'Show', greensub_license_path(license) %></div>
+    <div class="col-md-4"><%= link_to 'Edit', edit_greensub_license_path(license) %></div>
+    <div class="col-md-4"><%= link_to 'Destroy', greensub_license_path(license), method: :delete, data: { confirm: 'Are you sure?' } %></div>
   </div>
 <% end %>
