--- a/app/views/greensub/licenses/index.html.erb
+++ b/app/views/greensub/licenses/index.html.erb
@@ -1,6 +1,12 @@
 <div id="maincontent">
-  <% if @product.present? %>
-    <h1>Licenses of <%= link_to @product.identifier, greensub_product_path(@product) %> Product</h1>
+  <% if @individual.present? %>
+    <h1><%= link_to "#{@individual.identifier} - #{@individual.name}", greensub_individual_path(@individual) %> Licenses</h1>
+    <form name="filter" method="get" action="<%= greensub_individual_licenses_path(@individual) %>">
+  <% elsif @institution.present? %>
+    <h1><%= link_to "#{@institution.identifier} - #{@institution.name}", greensub_institution_path(@institution) %> Licenses</h1>
+    <form name="filter" method="get" action="<%= greensub_institution_licenses_path(@institution) %>">
+  <% elsif @product.present? %>
+    <h1><%= link_to "#{@product.identifier} - #{@product.name}", greensub_product_path(@product) %> Licenses</h1>
     <form name="filter" method="get" action="<%= greensub_product_institutions_path(@product) %>">
   <% else %>
     <h1>Licenses</h1>
@@ -20,10 +26,13 @@
             <div><input type="text" name="type_like" value="<%= params[:type_like] %>" size="<%= size %>" aria-label="type_like"></div>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-2">
+          <div>Affiliations</div>
+        </div>
+        <div class="col-md-4">
           <div>Licensee</div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-4">
           <div>Product</div>
         </div>
       </div>
@@ -31,29 +40,6 @@
       <div class="col-md-12"><hr/></div>
     </b>
   </form>
-
-  <% @licenses.each do |license| %>
-    <div class="col-md-10">
-      <div class="col-md-1"><%= license.id %></div>
-      <div class="col-md-1"><%= license.label %></div>
-      <div class="col-md-5">
-        <% if license.individual? %>
-          <%= link_to "#{license.licensee.identifier}", greensub_individual_path(license.licensee) %>
-        <% end %>
-        <% if license.institution? %>
-          <%= link_to "#{license.licensee.name}", greensub_institution_path(license.licensee) %>
-        <% end %>
-        &nbsp;
-      </div>
-      <div class="col-md-5">
-        <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
-      </div>
-    </div>
-    <div class="col-md-2">
-      <div class="col-md-4"><%= link_to_if license.update?, 'Edit', edit_greensub_license_path(license) %></div>
-      <div class="col-md-4"><%= link_to_if license.destroy?, 'Destroy', greensub_license_path(license), method: :delete, data: { confirm: 'Are you sure?' } %></div>
-    </div>
-  <% end %>
-
+  <%= render partial: 'licenses', locals: { licenses: @licenses } %>
   <div class="col-md-12">&nbsp<%= paginate @licenses %></div>
 </div>
