HELIO-3994 add temp job to populate to Greensub::License fields from Grants

--- a/app/views/fulcrum/_jobs.html.erb
+++ b/app/views/fulcrum/_jobs.html.erb
@@ -157,4 +157,8 @@
       <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Seed License Affiliations
     <% end %>
   </div>
+  <div class="row">
+    <%= link_to(fulcrum_exec_path(:grant_to_license), method: :get, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
+      <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Populate new License fields from Grants HELIO-3994
+    <% end %> 
 </div>
