--- a/app/views/greensub/individuals/show.html.erb
+++ b/app/views/greensub/individuals/show.html.erb
@@ -9,6 +9,7 @@
   <div class="col-md-11">&nbsp;<%= @individual.name %></div>
   <div class="col-md-1"><em>eMail</em></div>
   <div class="col-md-11">&nbsp;<%= @individual.email %></div>
+  <div class="col-md-12"><br/></div>
   <div class="col-md-1"><em>Licenses</em></div>
   <div class="col-md-11">&nbsp;<%= link_to @individual.licenses.count, greensub_individual_licenses_path(@individual) %></div>
   <div class="col-md-1"><em>Products</em></div>
