--- a/app/views/greensub/products/show.html.erb
+++ b/app/views/greensub/products/show.html.erb
@@ -12,6 +12,7 @@
   <div class="col-md-12"><br/></div>
   <div class="col-md-1"><em>Components</em></div>
   <div class="col-md-11">&nbsp;<%= link_to @product.components.count, greensub_product_components_path(@product) %></div>
+  <div class="col-md-12"><br/></div>
   <div class="col-md-1"><em>Individuals</em></div>
   <div class="col-md-11">&nbsp;<%= link_to @product.individuals.count, greensub_product_individuals_path(@product) %></div>
   <div class="col-md-1"><em>Institutions</em></div>
