--- a/app/views/fulcrum/_institution_affiliations.html.erb
+++ b/app/views/fulcrum/_institution_affiliations.html.erb
@@ -1,4 +1,4 @@
-<% institution_affiliations = Greensub::InstitutionAffiliation.filter_by(institution_id_like: params[:institution_id_like], dlps_institution_id_like: params[:dlps_institution_id_like], affiliation_like: params[:affiliation_like]).order(institution_id: :asc).page(params[:page]) %>
+<% institution_affiliations = Greensub::InstitutionAffiliation.filter_by(institution_id_like: params[:institution_id_like], dlps_institution_id_like: params[:dlps_institution_id_like], affiliation_like: params[:affiliation_like]).order(dlps_institution_id: :asc).page(params[:page]) %>
 <h1>Institution Affiliations</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:institution_affiliations) %>">
   <table class="table table-striped" summary="Institution Affiliation List">
@@ -26,7 +26,7 @@
             <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Destroy
           <% end %>
         </td>
-        <td><%= link_to institution_affiliation.institution.name, greensub_institution_path(institution_affiliation.institution)  %></td>
+        <td><%= link_to institution_affiliation.institution.name, greensub_institution_inst_affiliations_path(institution_affiliation.institution)  %></td>
         <td><%= institution_affiliation.dlps_institution_id %></td>
         <td><%= institution_affiliation.affiliation %></td>
       </tr>
