--- a/app/views/fulcrum/_licenses.html.erb
+++ b/app/views/fulcrum/_licenses.html.erb
@@ -1,12 +1,24 @@
-<% licenses = Greensub::License.filter_by(type_like: params[:type_like], licensee_id_like: params[:licensee_id_like], product_id_like: params[:product_id_like]).order(type: :asc).page(params[:page]) %>
+<%
+  if params[:institution_id_like].present?
+    params[:licensee_type_like] = Greensub::Institution.to_s
+    params[:licensee_id_like] = params[:institution_id_like]
+  elsif params[:individual_id_like].present?
+    params[:licensee_type_like] = Greensub::Individual.to_s
+    params[:licensee_id_like] = params[:individual_id_like]
+  else
+    params[:licensee_type_like] = ""
+    params[:licensee_id_like] = ""
+  end
+  licenses = Greensub::License.filter_by(type_like: params[:type_like], licensee_id_like: params[:licensee_id_like], product_id_like: params[:product_id_like]).order(type: :asc).page(params[:page])
+%>
 <h1>Licenses</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:licenses) %>">
   <table class="table table-striped" summary="License List">
     <tr>
       <th>
-        <%#= link_to(greensub_license_path) do %>
+        <%= link_to(new_greensub_license_path) do %>
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
-        <%# end %>
+        <% end %>
       </th>
       <th><label for="type_like">Type</label></th>
       <th>Affiliations</th>
@@ -19,7 +31,10 @@
       <td><button name="submit" type="submit" value="filter">Filter</button></td>
       <td><%= select(nil, "type_like", Greensub::License::TYPES.collect { |type| [type, type] }, include_blank: true, selected: params[:type_like]) %></td>
       <td>&nbsp;</td>
-      <td><%= select(nil, "licensee_id_like", Greensub::Institution.all.collect { |institution| [institution.name, institution.id] }, include_blank: true, selected: params[:licensee_id_like]) %></td>
+      <td>
+        <div><%= select(nil, "individual_id_like", Greensub::Individual.all.collect { |individual| ["#{individual.identifier} - #{individual.name}", individual.id] }, include_blank: true, selected: params[:individual_id_like]) %></div>
+        <div><%= select(nil, "institution_id_like", Greensub::Institution.all.collect { |institution| ["#{institution.identifier} - #{institution.name}", institution.id] }, include_blank: true, selected: params[:institution_id_like]) %></div>
+      </td>
       <td><%= select(nil, "product_id_like", Greensub::Product.all.collect { |product| [product.name, product.id] }, include_blank: true, selected: params[:product_id_like]) %></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -34,21 +49,24 @@
           <%= license.label %>
         </td>
         <td>
-          <%= license.license_affiliations.map(&:affiliation) %>
+          <% license.license_affiliations.map(&:affiliation).each do |affiliation| %>
+            <div><%= affiliation.to_s %></div>
+          <% end %>
         </td>
         <td>
             <% if license.individual? %>
-              <%= link_to "#{license.licensee.identifier}", greensub_individual_path(license.licensee) %>
+              <div><%= link_to license.licensee.identifier, greensub_individual_licenses_path(license.licensee) %></div>
+              <div><%= link_to license.licensee.name, greensub_individual_licenses_path(license.licensee) %></div>
+            <% elsif license.institution? %>
+              <div><%= link_to license.licensee.identifier, greensub_institution_licenses_path(license.licensee) %></div>
+              <div><%= link_to license.licensee.name, greensub_institution_licenses_path(license.licensee) %></div>
+            <% else %>
+              &nbsp;
             <% end %>
-            <% if license.institution? %>
-              <%= link_to "#{license.licensee.name}", greensub_institution_path(license.licensee) %>
-            &nbsp;
-              <%= license.licensee.institution_affiliations.map(&:affiliation) %>
-            <% end %>
-          &nbsp;
         </td>
         <td>
-          <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
+          <div><%= link_to license.product.identifier, greensub_product_licenses_path(license.product) %></div>
+          <div><%= link_to license.product.name, greensub_product_licenses_path(license.product) %></div>
         </td>
         <td>&nbsp;</td>
         <td>
