--- a/app/views/fulcrum/_products.html.erb
+++ b/app/views/fulcrum/_products.html.erb
@@ -7,23 +7,29 @@
         <%= link_to(new_greensub_product_path) do %>
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
         <% end %>
+        <div>&nbsp;</div>
+        <button name="submit" type="submit" value="filter">Filter</button>
       </th>
       <th>
         <% size = 24 %>
         <div class="col-md-12">
-          <div class="col-md-2"><label for="identifier_like">Identifier</label></div><div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div>
+          <div class="col-md-2"><label for="identifier_like">Identifier</label></div>
+          <div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div>
         </div>
         <div class="col-md-12">
-          <div class="col-md-2"><label for="name_like">Name</label></div><div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div></div>
+          <div class="col-md-2"><label for="name_like">Name</label></div>
+          <div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div>
         </div>
         <div class="col-md-12">
-          <div class="col-md-2"><label for="purchase_like">Purchase</label></div><div class="col-md-10"><input type="text" name="purchase_like" value="<%= params[:purchase_like] %>" size="<%= size %>" aria-label="purchase_like"></div></div>
+          <div class="col-md-2"><label for="purchase_like">Purchase</label></div>
+          <div class="col-md-10"><input type="text" name="purchase_like" value="<%= params[:purchase_like] %>" size="<%= size %>" aria-label="purchase_like"></div>
         </div>
       </th>
       <th>
         <div>Components</div>
-        <div>&nbsp;</div>
-        <div><button name="submit" type="submit" value="filter">Filter</button></div>
+        <div>Individuals</div>
+        <div>Institutions</div>
+        <div>Licenses</div>
       </th>
     </tr>
     <% products.each do |product| %>
@@ -34,11 +40,16 @@
           <% end %>
         </td>
         <td>
-          <div class="col-md-12"><%= product.identifier %></div>
-          <div class="col-md-12"><%= product.name %></div>
-          <div class="col-md-12"><%= link_to product.purchase, product.purchase %>&nbsp;</div>
+          <div><%= product.identifier %></div>
+          <div><%= product.name %></div>
+          <div><%= link_to product.purchase, product.purchase %>&nbsp;</div>
         </td>
-        <td><%= link_to product.components.count, greensub_product_components_path(product) %></td>
+        <td>
+          <div><%= link_to product.components.count, greensub_product_components_path(product) %></div>
+          <div><%= link_to product.individuals.count, greensub_product_individuals_path(product) %></div>
+          <div><%= link_to product.institutions.count, greensub_product_institutions_path(product) %></div>
+          <div><%= link_to product.licenses.count, greensub_product_licenses_path(product) %></div>
+        </td>
       </tr>
     <% end %>
   </table>
