--- a/app/views/greensub/institutions/show.html.erb
+++ b/app/views/greensub/institutions/show.html.erb
@@ -13,8 +13,10 @@
   <div class="col-md-11">&nbsp;<%= @institution.site %></div>
   <div class="col-md-1"><em>Login</em></div>
   <div class="col-md-11">&nbsp;<%= @institution.login %></div>
+  <div class="col-md-12"><br/></div>
   <div class="col-md-1"><em>Affiliations</em></div>
   <div class="col-md-11">&nbsp;<%= link_to @institution.institution_affiliations.count, greensub_institution_inst_affiliations_path(@institution) %></div>
+  <div class="col-md-12"><br/></div>
   <div class="col-md-1"><em>Licenses</em></div>
   <div class="col-md-11">&nbsp;<%= link_to @institution.licenses.count, greensub_institution_licenses_path(@institution) %></div>
   <div class="col-md-1"><em>Products</em></div>
