--- a/app/views/fulcrum/_jobs.html.erb
+++ b/app/views/fulcrum/_jobs.html.erb
@@ -160,5 +160,11 @@
   <div class="row">
     <%= link_to(fulcrum_exec_path(:grant_to_license), method: :get, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
       <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Populate new License fields from Grants HELIO-3994
-    <% end %> 
+    <% end %>
+  </div>
+  <div class="row">
+    <%= link_to(fulcrum_exec_path(:license_to_grant), method: :get, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
+      <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Create Grants for Licenses
+    <% end %>
+  </div>
 </div>
