--- a/app/views/fulcrum/_licenses.html.erb
+++ b/app/views/fulcrum/_licenses.html.erb
@@ -22,8 +22,7 @@
       </th>
       <th><label for="type_like">Type</label></th>
       <th>Affiliations</th>
-      <th><label for="licensee_id_like">Licensee</label></th>
-      <th><label for="product_id_like">Product</label></th>
+      <th><label for="licensee_id_like">Licensee</label> / <label for="product_id_like">Product</label></th>
       <th>&nbsp;</th>
       <th>&nbsp;</th>
     </tr>
@@ -34,8 +33,8 @@
       <td>
         <div><%= select(nil, "individual_id_like", Greensub::Individual.all.collect { |individual| ["#{individual.identifier} - #{individual.name}", individual.id] }, include_blank: true, selected: params[:individual_id_like]) %></div>
         <div><%= select(nil, "institution_id_like", Greensub::Institution.all.collect { |institution| ["#{institution.identifier} - #{institution.name}", institution.id] }, include_blank: true, selected: params[:institution_id_like]) %></div>
+        <div><%= select(nil, "product_id_like", Greensub::Product.all.collect { |product| [product.name, product.id] }, include_blank: true, selected: params[:product_id_like]) %></div>
       </td>
-      <td><%= select(nil, "product_id_like", Greensub::Product.all.collect { |product| [product.name, product.id] }, include_blank: true, selected: params[:product_id_like]) %></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
@@ -54,17 +53,15 @@
           <% end %>
         </td>
         <td>
-            <% if license.individual? %>
-              <div><%= link_to license.licensee.identifier, greensub_individual_licenses_path(license.licensee) %></div>
-              <div><%= link_to license.licensee.name, greensub_individual_licenses_path(license.licensee) %></div>
-            <% elsif license.institution? %>
-              <div><%= link_to license.licensee.identifier, greensub_institution_licenses_path(license.licensee) %></div>
-              <div><%= link_to license.licensee.name, greensub_institution_licenses_path(license.licensee) %></div>
-            <% else %>
-              &nbsp;
-            <% end %>
-        </td>
-        <td>
+          <% if license.individual? %>
+            <div><%= link_to license.licensee.identifier, greensub_individual_licenses_path(license.licensee) %></div>
+            <div><%= link_to license.licensee.name, greensub_individual_licenses_path(license.licensee) %></div>
+          <% elsif license.institution? %>
+            <div><%= link_to license.licensee.identifier, greensub_institution_licenses_path(license.licensee) %></div>
+            <div><%= link_to license.licensee.name, greensub_institution_licenses_path(license.licensee) %></div>
+          <% else %>
+            &nbsp;
+          <% end %>
           <div><%= link_to license.product.identifier, greensub_product_licenses_path(license.product) %></div>
           <div><%= link_to license.product.name, greensub_product_licenses_path(license.product) %></div>
         </td>
