--- a/app/views/greensub/licenses/index.html.erb
+++ b/app/views/greensub/licenses/index.html.erb
@@ -30,8 +30,9 @@
       <div class="col-md-1">ID</div>
       <div class="col-md-1">Type</div>
       <div class="col-md-2">Affiliations</div>
-      <div class="col-md-4">Licensee</div>
-      <div class="col-md-4">Product</div>
+      <div class="col-md-8">
+        <div>Licensee / Product</div>
+      </div>
     </div>
     <div class="col-md-2"><%= link_to "New License", new_greensub_license_path(licensee_type: licensee_type, licensee_id: licensee_id, product: @product) %></div>
   </b>
@@ -41,11 +42,11 @@
         <div class="col-md-1"><button name="submit" type="submit" value="filter">Filter</button></div>
         <div class="col-md-1"><%= select(nil, "type_like", Greensub::License::TYPES.collect { |type| [type, type] }, include_blank: true, selected: params[:type_like]) %></div>
         <div class="col-md-2">&nbsp;</div>
-        <div class="col-md-4">
+        <div class="col-md-8">
           <div><%= select(nil, "individual_id_like", Greensub::Individual.all.collect { |individual| ["#{individual.identifier} - #{individual.name}", individual.id] }, include_blank: true, selected: params[:individual_id_like]) %></div>
           <div><%= select(nil, "institution_id_like", Greensub::Institution.all.collect { |institution| ["#{institution.identifier} - #{institution.name}", institution.id] }, include_blank: true, selected: params[:institution_id_like]) %></div>
+          <div><%= select(nil, "product_id_like", Greensub::Product.all.collect { |product| ["#{product.identifier} - #{product.name}", product.id] }, include_blank: true, selected: params[:product_id_like]) %></div>
         </div>
-        <div class="col-md-4"><%= select(nil, "product_id_like", Greensub::Product.all.collect { |product| ["#{product.identifier} - #{product.name}", product.id] }, include_blank: true, selected: params[:product_id_like]) %></div>
       </div>
       <div class="col-md-2">&nbsp;</div>
     </b>
@@ -54,17 +55,14 @@
   <div class="col-md-12"><hr/></div>
   <% @licenses.each do |license| %>
     <div class="col-md-10">
-      <div class="col-md-1">
-        <div><%= license.id %></div>
-        <div><%= "G" if license.active? %></div>
-      </div>
+      <div class="col-md-1"><%= license.id %><%= "*" if license.active? %></div>
       <div class="col-md-1"><%= license.label %></div>
       <div class="col-md-2">
         <% license.license_affiliations.map(&:affiliation).each do |affiliation| %>
           <div><%= affiliation.to_s %></div>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-8">
         <% if license.individual? %>
           <div><%= link_to_if !@individual.present?, license.licensee.identifier, greensub_individual_licenses_path(license.licensee) %></div>
           <div><%= link_to_if !@individual.present?, license.licensee.name, greensub_individual_licenses_path(license.licensee) %></div>
@@ -73,15 +71,13 @@
           <div><%= link_to_if !@institution.present?, license.licensee.identifier, greensub_institution_licenses_path(license.licensee) %></div>
           <div><%= link_to_if !@institution.present?, license.licensee.name, greensub_institution_licenses_path(license.licensee) %></div>
         <% end %>
-      </div>
-      <div class="col-md-4">
         <div><%= link_to_if !@product.present?, license.product.identifier, greensub_product_licenses_path(license.product) %></div>
         <div><%= link_to_if !@product.present?, license.product.name, greensub_product_licenses_path(license.product) %></div>
       </div>
     </div>
     <div class="col-md-2">
-      <div><%= link_to 'Show', greensub_license_path(license) %></div>
-      <div><%= link_to_if license.destroy?, 'Destroy', greensub_license_path(license), method: :delete, data: { confirm: 'Are you sure?' } %></div>
+      <div class="col-md-6"><%= link_to 'Show', greensub_license_path(license) %></div>
+      <div class="col-md-6"><%= link_to_if license.destroy?, 'Destroy', greensub_license_path(license), method: :delete, data: { confirm: 'Are you sure?' } %></div>
     </div>
     <div class="col-md-12"><hr/></div>
 <% end %>
