--- a/app/views/fulcrum/_dashboard.html.erb
+++ b/app/views/fulcrum/_dashboard.html.erb
@@ -25,7 +25,7 @@
   <ul>
     <li>
       <div>
-        <span>Filter individual by </span>
+        <label for="individual_filter">Filter individuals by </label>
         <input type="text" id="individual_filter" name="individual_filter" value=<%= params['individual_filter'] %>>
         <button>filter</button>
       </div>
@@ -37,7 +37,7 @@
     </li>
     <li>
       <div>
-        <span>Filter institution by</span>
+        <label for="institution_filter">Filter institutions by</label>
         <input type="text" id="institution_filter" name="institution_filter" value=<%= params['institution_filter'] %>>
         <button>filter</button>
       </div>
