--- a/app/views/greensub/individuals/show.html.erb
+++ b/app/views/greensub/individuals/show.html.erb
@@ -19,6 +19,8 @@
     <%= link_to_if @individual.update?, 'Edit', edit_greensub_individual_path(@individual) %>
     <span> | </span>
     <%= link_to 'Back', greensub_individuals_path %>
+    <span> | </span>
+    <%= link_to_if @individual.destroy?, 'Destroy', greensub_individual_path(@individual), method: :delete, data: { confirm: 'Are you sure?' } %>
   </div>
   <div class="col-md-12"><br/></div>
 </div>
