--- a/app/views/fulcrum/_dashboard.html.erb
+++ b/app/views/fulcrum/_dashboard.html.erb
@@ -37,12 +37,12 @@
     </li>
     <li>
       <div>
-        <label for="institution_filter">Filter institutions by</label>
+        <label for="institution_filter">Filter institution affiliations by</label>
         <input type="text" id="institution_filter" name="institution_filter" value=<%= params['institution_filter'] %>>
         <button>filter</button>
       </div>
       <div>
-        <span>Institution </span>
+        <span>Institution Affiliation</span>
         <%= select_tag "institution_affiliation_id", options_for_select(@institution_affiliations, Incognito.sudo_actor_institution_affiliation(current_actor)&.id), include_blank: '' %>
       </div>
       <div>&nbsp;</div>
